--- a/ui/src/components/ObjectViewerComponent.css
+++ b/ui/src/components/ObjectViewerComponent.css
@@ -23,6 +23,8 @@
 
 .image-viewer img {
     width: 100%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
 }
 
 .object-viewer-wrapper .controls-bar {
